--- a/pages/myGame/myGame.wxml
+++ b/pages/myGame/myGame.wxml
@@ -14,7 +14,25 @@
                 
                 </view>
             </view>
+            <view></view>
             <view class="weui-tab__panel">
+                <view class="weui-search-bar">
+                    <view class="weui-search-bar__form">
+                        <view class="weui-search-bar__box">
+                            <icon class="weui-icon-search_in-box" type="search" size="14"></icon>
+                            <input type="text" class="weui-search-bar__input" placeholder="搜索" value="{{inputVal}}"
+                                   focus="{{inputShowed}}" bindinput="inputTyping"  />
+                            <view class="weui-icon-clear" wx:if="{{inputVal.length > 0}}" bindtap="clearInput">
+                                <icon type="clear" size="14"></icon>
+                            </view>
+                        </view>
+                        <label class="weui-search-bar__label" hidden="{{inputShowed}}" bindtap="showInput">
+                            <icon class="weui-icon-search" type="search" size="14"></icon>
+                            <view class="weui-search-bar__text">搜索</view>
+                        </label>
+                    </view>
+                    <view class="weui-search-bar__cancel-btn" hidden="{{!inputShowed}}" bindtap="hideInput">取消</view>
+                </view>
                 <view class="weui-tab__content" hidden="{{activeIndex != 0}}">
                     <view class="page__hd">
                         <view class="page__title">现有比赛</view>
@@ -24,7 +42,7 @@
                             <view class="weui-loadmore__tips weui-loadmore__tips_in-line">暂无数据</view>
                         </view>
                     </block>
-                    <view wx:for="{{availableGames}}" wx:key="*this">
+                    <view wx:for="{{filteredGames}}" wx:key="*this">
                         <view class="page__bd">
                             <view class="weui-form-preview">
                                 <view class="weui-form-preview__hd">
@@ -71,7 +89,7 @@
                                 <view class="weui-loadmore__tips weui-loadmore__tips_in-line">暂无数据</view>
                             </view>
                         </block>
-                        <view wx:for="{{myCreatedGames}}" wx:key="*this">
+                        <view wx:for="{{filteredGames}}" wx:key="*this">
                             <view class="page__bd">
                                 <view class="weui-form-preview">
                                     <view class="weui-form-preview__hd">
@@ -119,7 +137,7 @@
                                     <view class="weui-loadmore__tips weui-loadmore__tips_in-line">暂无数据</view>
                                 </view>
                             </block>
-                            <view wx:for="{{myEnroledGames}}" wx:key="*this">
+                            <view wx:for="{{filteredGames}}" wx:key="*this">
                                 <view class="page__bd">
                                     <view class="weui-form-preview">
                                         <view class="weui-form-preview__hd">
