--- a/pages/createGame/createGame.wxml
+++ b/pages/createGame/createGame.wxml
@@ -7,75 +7,83 @@
     <view class="page__title">赛事发布</view>
   </view>
 
-  <view class="weui-cells__title">请输入比赛信息</view>
-    <form bindreset='formReset' bindsubmit='formSubmit'>
-    <view class="weui-cells weui-cells_after-title">
-      <view class="weui-cell weui-cell_input">
-        <view class="weui-cell__hd">
-          <view class="weui-label">赛事名称</view>
-        </view>
-        <view class="weui-cell__bd">
-          <input class="weui-input" placeholder="请输入赛事名称" name="gameName" bindinput="bindGameName" value='{{gameName}}'/>
-        </view>
-      </view>
-      <view class="weui-cell weui-cell_input">
-        <view class="weui-cell__hd">
-          <view class="weui-label">发布者</view>
-        </view>
-        <view class="weui-cell__bd">
-          <input class="weui-input" placeholder="请输入赛事发布者" name="gamePublisher" bindinput="bindGamePublisher" value='{{gamePublisher}}'/>
-        </view>
-      </view>
-    <view class="weui-cell weui-cell_input">
-      <view class="weui-cell__hd">
-        <view class="weui-label">日期</view>
-      </view>
-      <view class="weui-cell__bd">
-        <picker value="{{gameDate}}" name="gameDate" mode="date" bindchange="bindDateChange" start="2017-01-01" end="2050-12-31" fields="day">
-          <view class="weui-input">{{gameDate}}</view>
-        </picker>
-      </view>
+  <block wx:if="{{!isAdmin}}">
+    <view class="weui-loadmore weui-loadmore_line">
+      <view class="weui-loadmore__tips weui-loadmore__tips_in-line">您暂无权限发布比赛</view>
     </view>
-    <view class="weui-cell weui-cell_input">
-      <view class="weui-cell__hd">
-        <view class="weui-label">开始时间</view>
-      </view>
-        <view class="weui-cell__bd">
-        <picker value="{{gameTime}}" name="gameTime" mode="time" bindchange="bindTimeChange" start="00:00" end="23:59">
-          <view class="weui-input">{{gameTime}}</view>
-        </picker>
-      </view>
-    </view>
-    <view class="weui-cell weui-cell_input">
-      <view class="weui-cell__hd">
-        <view class="weui-label">结束时间</view>
-      </view>
-        <view class="weui-cell__bd">
-        <picker value="{{gameEndTime}}" name="gameEndTime" mode="time" bindchange="bindEndTimeChange" start="00:00" end="23:59">
-          <view class="weui-input">{{gameEndTime}}</view>
-        </picker>
-      </view>
-    </view>
-    <view class="weui-cell weui-cell_input">
-      <view class="weui-cell__hd">
-        <view class="weui-label">裁判数</view>
-      </view>
-      <view class="weui-cell__bd">
-        <input class="weui-input" placeholder="请输入需要的裁判数" name="refereeNumber" bindinput="bindRefereeNumber" value='{{refereeNumber}}'/>
-      </view>
-    </view>
-  </view>
+  </block>
 
-  <view class="weui-btn-area">
-    <button class="weui-btn" type="primary" formType="submit">提交</button>
-    <button class="weui-btn" type="default" formType="reset">重置</button>
-  </view>
-  </form>
-  
-   <view class="weui-footer">
+  <block wx:if="{{isAdmin}}">
+    <view class="weui-cells__title">请输入比赛信息</view>
+      <form bindreset='formReset' bindsubmit='formSubmit'>
+      <view class="weui-cells weui-cells_after-title">
+        <view class="weui-cell weui-cell_input">
+          <view class="weui-cell__hd">
+            <view class="weui-label">赛事名称</view>
+          </view>
+          <view class="weui-cell__bd">
+            <input class="weui-input" placeholder="请输入赛事名称" name="gameName" bindinput="bindGameName" value='{{gameName}}'/>
+          </view>
+        </view>
+        <view class="weui-cell weui-cell_input">
+          <view class="weui-cell__hd">
+            <view class="weui-label">发布者</view>
+          </view>
+          <view class="weui-cell__bd">
+            <input class="weui-input" placeholder="请输入赛事发布者" name="gamePublisher" bindinput="bindGamePublisher" value='{{gamePublisher}}'/>
+          </view>
+        </view>
+      <view class="weui-cell weui-cell_input">
+        <view class="weui-cell__hd">
+          <view class="weui-label">日期</view>
+        </view>
+        <view class="weui-cell__bd">
+          <picker value="{{gameDate}}" name="gameDate" mode="date" bindchange="bindDateChange" start="2017-01-01" end="2050-12-31" fields="day">
+            <view class="weui-input">{{gameDate}}</view>
+          </picker>
+        </view>
+      </view>
+      <view class="weui-cell weui-cell_input">
+        <view class="weui-cell__hd">
+          <view class="weui-label">开始时间</view>
+        </view>
+          <view class="weui-cell__bd">
+          <picker value="{{gameTime}}" name="gameTime" mode="time" bindchange="bindTimeChange" start="00:00" end="23:59">
+            <view class="weui-input">{{gameTime}}</view>
+          </picker>
+        </view>
+      </view>
+      <view class="weui-cell weui-cell_input">
+        <view class="weui-cell__hd">
+          <view class="weui-label">结束时间</view>
+        </view>
+          <view class="weui-cell__bd">
+          <picker value="{{gameEndTime}}" name="gameEndTime" mode="time" bindchange="bindEndTimeChange" start="00:00" end="23:59">
+            <view class="weui-input">{{gameEndTime}}</view>
+          </picker>
+        </view>
+      </view>
+      <view class="weui-cell weui-cell_input">
+        <view class="weui-cell__hd">
+          <view class="weui-label">裁判数</view>
+        </view>
+        <view class="weui-cell__bd">
+          <input class="weui-input" placeholder="请输入需要的裁判数" name="refereeNumber" bindinput="bindRefereeNumber" value='{{refereeNumber}}'/>
+        </view>
+      </view>
+    </view>
+      <view class="weui-btn-area">
+        <button class="weui-btn" type="primary" formType="submit">提交</button>
+        <button class="weui-btn" type="default" formType="reset">重置</button>
+      </view>
+    </form>
+  </block>
+
+  <view class="weui-footer weui-footer_fixed-bottom">
     <view class="weui-footer__links">
       <view class="weui-footer__link">SoraYama</view>
     </view>
     <view class="weui-footer__text">Copyright © 2017 sorayamah.org</view>
   </view> 
+
 </view>
