--- a/pages/enrol/enrol.wxml
+++ b/pages/enrol/enrol.wxml
@@ -1,12 +1,9 @@
-<!--enrol.wxml-->
+<!-- enrol.wxml -->
 <view class="page" xmlns:wx="http://www.w3.org/1999/xhtml">
-  
   <view class="weui-toptips weui-toptips_warn" wx:if="{{showTopTips}}">表单缺项</view>
-  
   <view class="page__hd">
     <view class="page__title">赛事详情</view>
   </view>
-
   <view class="page__bd">
     <view class="weui-form-preview">
       <view class="weui-form-preview__hd">
@@ -16,118 +13,123 @@
         </view>
       </view>
       <view class="weui-form-preview__bd">
-        <view class="weui-form-preview__item">
-          <view class="weui-form-preview__label">日期</view>
-          <view class="weui-form-preview__value">{{game.gameDate}}</view>
+        <view class="weui-form-preview__label">发布者</view>
+        <view class="weui-form-preview__value">
+          <image src="{{game.publisherAvatar}}" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+          {{game.gamePublisher}}
+          </view>
+          <view class="weui-form-preview__item">
+            <view class="weui-form-preview__label">日期</view>
+            <view class="weui-form-preview__value">{{game.gameDate}}</view>
+          </view>
+          <view class="weui-form-preview__item">
+            <view class="weui-form-preview__label">时间</view>
+            <view class="weui-form-preview__value">{{game.gameTime}} ~ {{game.gameEndTime}}</view>
+          </view>
+          <view class="weui-form-preview__item">
+            <view class="weui-form-preview__label">需要裁判</view>
+            <view class="weui-form-preview__value">{{game.refereeNumber}}名</view>
+          </view>
+          <block wx:if="{{own}}">
+            <view class="weui-form-preview__item">
+              <view class="weui-form-preview__label">现已选派</view>
+              <view class="weui-form-preview__value">{{refereeNames}}</view>
+            </view>
+          </block>
         </view>
-        <view class="weui-form-preview__item">
-          <view class="weui-form-preview__label">时间</view>
-          <view class="weui-form-preview__value">{{game.gameTime}} ~ {{game.gameEndTime}}</view>
-        </view>
-        <view class="weui-form-preview__item">
-          <view class="weui-form-preview__label">需要裁判</view>
-          <view class="weui-form-preview__value">{{game.refereeNumber}}名</view>
-        </view>
-        <block wx:if="{{own}}">
-        <view class="weui-form-preview__item">
-          <view class="weui-form-preview__label">现已选派</view>
-          <view class="weui-form-preview__value">{{refereeNames}}</view>
-        </view>
-        </block>
       </view>
     </view>
-  </view>
-
-  <block wx:if="{{!cancel && !own}}">
-    <view class="weui-cells__title">请输入报名信息</view>
-    <view class="weui-cells__title">注意：如需修改信息请尽早（在选派之前）修改</view>
-    <form bindreset='formReset' bindsubmit='formSubmit'>
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <view class="weui-cell__hd">
-            <view class="weui-label">姓名</view>
+    <block wx:if="{{!cancel && !own}}">
+      <view class="weui-cells__title">请输入报名信息</view>
+      <view class="weui-cells__title">注意：如需修改信息请尽早（在选派之前）修改</view>
+      <form bindreset='formReset' bindsubmit='formSubmit'>
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__hd">
+              <view class="weui-label">姓名</view>
+            </view>
+            <view class="weui-cell__bd">
+              <input class="weui-input" placeholder="请输入你的姓名" name="refereeName" bindinput="bindRefereeNameChange"
+                     value='{{myName}}'  />
+            </view>
           </view>
-          <view class="weui-cell__bd">
-            <input class="weui-input" placeholder="请输入你的姓名" name="refereeName" bindinput="bindRefereeNameChange" value='{{myName}}'/>
+          <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__hd">
+              <view class="weui-label">执法时段</view>
+            </view>
+            <view class="weui-cell__bd">
+              <picker value="{{startRefTime}}" name="startRefTime" mode="time" bindchange="bindStartRefTimeChange"
+                      start="00:00" end="23:59">
+                <view class="weui-input">{{startRefTime}}</view>
+              </picker>
+            </view>
           </view>
-      </view>
-      <view class="weui-cell weui-cell_input">
-        <view class="weui-cell__hd">
-          <view class="weui-label">执法时段</view>
+          <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__hd">
+              <view class="weui-label">到</view>
+            </view>
+            <view class="weui-cell__bd">
+              <picker value="{{endRefTime}}" name="endRefTime" mode="time" bindchange="bindEndRefTimeChange"
+                      start="00:00" end="23:59">
+                <view class="weui-input">{{endRefTime}}</view>
+              </picker>
+            </view>
+          </view>
         </view>
-          <view class="weui-cell__bd">
-          <picker value="{{startRefTime}}" name="startRefTime" mode="time" bindchange="bindStartRefTimeChange" start="00:00" end="23:59">
-            <view class="weui-input">{{startRefTime}}</view>
-          </picker>
+        <view class="weui-btn-area">
+          <button class="weui-btn" type="primary" formType="submit">确认</button>
         </view>
-      </view>
-      <view class="weui-cell weui-cell_input">
-        <view class="weui-cell__hd">
-          <view class="weui-label">到</view>
-        </view>
-        <view class="weui-cell__bd">
-          <picker value="{{endRefTime}}" name="endRefTime" mode="time" bindchange="bindEndRefTimeChange" start="00:00" end="23:59">
-            <view class="weui-input">{{endRefTime}}</view>
-          </picker>
-        </view>
-      </view>
-      </view>
-
+      </form>
+    </block>
+    <block wx:if="{{cancel}}">
       <view class="weui-btn-area">
-        <button class="weui-btn" type="primary" formType="submit">确认</button>
-      </view>
-    </form>
-  </block>
-
-  <block wx:if="{{cancel}}">
-    <view class="weui-btn-area">
-      <button class="weui-btn" type="warn" bindtap="cancelEnrol">取消报名</button>
-    </view>
-  </block>
-
-  <block wx:if="{{own}}">
-    <view class="weui-cells__title">现有报名人员</view>
-    <block wx:if="{{!game.referees || game.referees.length === 0}}">
-      <view class="weui-loadmore weui-loadmore_line">
-        <view class="weui-loadmore__tips weui-loadmore__tips_in-line">暂无数据</view>
+        <button class="weui-btn" type="warn" bindtap="cancelEnrol">取消报名</button>
       </view>
     </block>
-    <view wx:for="{{game.referees}}" wx:key="*this">
-      <view class="page__bd">
-        <view class="weui-form-preview">
-          <view class="weui-form-preview__hd">
-            <view class="weui-form-preview__item">
-              <view class="weui-form-preview__label">姓名</view>
-              <view class="weui-form-preview__value_in-hd">{{item.refereeName}}</view>
+    <block wx:if="{{own}}">
+      <view class="weui-cells__title">现有报名人员</view>
+      <block wx:if="{{!game.referees || game.referees.length === 0}}">
+        <view class="weui-loadmore weui-loadmore_line">
+          <view class="weui-loadmore__tips weui-loadmore__tips_in-line">暂无数据</view>
+        </view>
+      </block>
+      <view wx:for="{{game.referees}}" wx:key="*this">
+        <view class="page__bd">
+          <view class="weui-form-preview">
+            <view class="weui-form-preview__hd">
+              <view class="weui-form-preview__item">
+                <view class="weui-form-preview__label">姓名</view>
+                <view class="weui-form-preview__value_in-hd">
+                  <image src="{{item.userInfo && item.userInfo.avatarUrl}}" style="margin-right: 5px;vertical-align: middle;width:25px; height: 25px;"></image>
+                  {{item.refereeName}}
+                </view>
+              </view>
             </view>
-          </view>
-
-          <view class="weui-form-preview__bd">   
-            <view class="weui-form-preview__item">
-              <view class="weui-form-preview__label">可执法时段</view>
-              <view class="weui-form-preview__value">{{item.startRefTime}} ~ {{item.endRefTime}}</view>
+            <view class="weui-form-preview__bd">
+              <view class="weui-form-preview__item">
+                <view class="weui-form-preview__label">可执法时段</view>
+                <view class="weui-form-preview__value">{{item.startRefTime}} ~ {{item.endRefTime}}</view>
+              </view>
             </view>
+            <block wx:if="{{!item.assigned}}">
+              <view class="weui-form-preview__ft">
+                <button class="weui-form-preview__btn weui-form-preview__btn_primary" hover-class="weui-form-preview__btn_active"
+                        bindtap="assign" data-openid="{{item.openid}}">选派</button>
+              </view>
+            </block>
+            <block wx:if="{{item.assigned}}">
+              <view class="weui-form-preview__ft">
+                <button class="weui-form-preview__btn weui-form-preview__btn_default" hover-class="weui-form-preview__btn_active"
+                        bindtap="assign" data-openid="{{item.openid}}">撤销</button>
+              </view>
+            </block>
           </view>
-
-          <block wx:if="{{!item.assigned}}">
-          <view class="weui-form-preview__ft">
-            <button class="weui-form-preview__btn weui-form-preview__btn_primary" hover-class="weui-form-preview__btn_active" bindtap="assign" data-openid="{{item.openid}}">选派</button>
-          </view>
-          </block>
-          <block wx:if="{{item.assigned}}">
-          <view class="weui-form-preview__ft">
-            <button class="weui-form-preview__btn weui-form-preview__btn_default" hover-class="weui-form-preview__btn_active" bindtap="assign" data-openid="{{item.openid}}">撤销</button>
-          </view>
-          </block>
-
         </view>
       </view>
-    </view>
-  </block>
-
-  <block wx:if="{{own}}">
-  <view class="weui-btn-area">
-    <button class="weui-btn" type="warn" bindtap="onDeleteGame">删除比赛</button>
+    </block>
+    <block wx:if="{{own}}">
+      <view class="weui-btn-area">
+        <button class="weui-btn" type="warn" bindtap="onDeleteGame">删除比赛</button>
+      </view>
+    </block>
   </view>
-  </block>
-</view>
