--- a/pages/enrol/enrol.wxml
+++ b/pages/enrol/enrol.wxml
@@ -28,12 +28,18 @@
           </view>
           <view class="weui-form-preview__item">
             <view class="weui-form-preview__label">需要裁判</view>
-            <view class="weui-form-preview__value">{{game.refereeNumber}}名</view>
+            <view class="weui-form-preview__value">{{game.refereeNumber}}</view>
           </view>
           <block wx:if="{{own}}">
             <view class="weui-form-preview__item">
+              <view class="weui-form-preview__label">现已报名</view>
+              <view class="weui-form-preview__value">{{game.referees ? game.referees.length : 0}} 人</view>
+            </view>
+          </block>
+          <block wx:if="{{own}}">
+            <view class="weui-form-preview__item">
               <view class="weui-form-preview__label">现已选派</view>
-              <view class="weui-form-preview__value">{{refereeNames}}</view>
+              <view class="weui-form-preview__value">{{refereeNames}} \n 共 {{refereeNames.length}} 人</view>
             </view>
           </block>
         </view>
@@ -53,28 +59,19 @@
                      value='{{myName}}'  />
             </view>
           </view>
-          <view class="weui-cell weui-cell_input">
-            <view class="weui-cell__hd">
-              <view class="weui-label">执法时段</view>
-            </view>
-            <view class="weui-cell__bd">
-              <picker value="{{startRefTime}}" name="startRefTime" mode="time" bindchange="bindStartRefTimeChange"
-                      start="00:00" end="23:59">
-                <view class="weui-input">{{startRefTime}}</view>
-              </picker>
-            </view>
-          </view>
-          <view class="weui-cell weui-cell_input">
-            <view class="weui-cell__hd">
-              <view class="weui-label">到</view>
-            </view>
-            <view class="weui-cell__bd">
-              <picker value="{{endRefTime}}" name="endRefTime" mode="time" bindchange="bindEndRefTimeChange"
-                      start="00:00" end="23:59">
-                <view class="weui-input">{{endRefTime}}</view>
-              </picker>
-            </view>
-          </view>
+        </view>
+        <view class="weui-cells__title">可执法时段</view>
+        <view class="weui-cells weui-cells_after-title">
+          <checkbox-group bindchange="checkboxChange">
+            <label class="weui-cell weui-check__label" wx:for="{{checkboxItems}}" wx:key="value">
+              <checkbox class="weui-check" value="{{item.value}}" checked="{{item.checked}}"  />
+              <view class="weui-cell__hd weui-check__hd_in-checkbox">
+                <icon class="weui-icon-checkbox_circle" type="circle" size="23" wx:if="{{!item.checked}}"></icon>
+                <icon class="weui-icon-checkbox_success" type="success" size="23" wx:if="{{item.checked}}"></icon>
+              </view>
+              <view class="weui-cell__bd">{{item.name}}</view>
+            </label>
+          </checkbox-group>
         </view>
         <view class="weui-btn-area">
           <button class="weui-btn" type="primary" formType="submit">确认</button>
@@ -100,36 +97,37 @@
               <view class="weui-form-preview__item">
                 <view class="weui-form-preview__label">姓名</view>
                 <view class="weui-form-preview__value_in-hd">
-                  <image src="{{item.userInfo && item.userInfo.avatarUrl}}" style="margin-right: 5px;vertical-align: middle;width:25px; height: 25px;"></image>
+                  <image src="{{item.userInfo && item.userInfo.avatarUrl}}"
+                         style="margin-right: 5px;vertical-align: middle;width:25px; height: 25px;"></image>
                   {{item.refereeName}}
                 </view>
+                </view>
               </view>
+              <view class="weui-form-preview__bd">
+                <view class="weui-form-preview__item">
+                  <view class="weui-form-preview__label">执法时段</view>
+                  <view class="weui-form-preview__value">{{item.availablePeriod}}</view>
+                </view>
+              </view>
+              <block wx:if="{{!item.assigned}}">
+                <view class="weui-form-preview__ft">
+                  <button class="weui-form-preview__btn weui-form-preview__btn_primary" hover-class="weui-form-preview__btn_active"
+                          bindtap="assign" data-openid="{{item.openid}}">选派</button>
+                </view>
+              </block>
+              <block wx:if="{{item.assigned}}">
+                <view class="weui-form-preview__ft">
+                  <button class="weui-form-preview__btn weui-form-preview__btn_default" hover-class="weui-form-preview__btn_active"
+                          bindtap="assign" data-openid="{{item.openid}}">撤销</button>
+                </view>
+              </block>
             </view>
-            <view class="weui-form-preview__bd">
-              <view class="weui-form-preview__item">
-                <view class="weui-form-preview__label">可执法时段</view>
-                <view class="weui-form-preview__value">{{item.startRefTime}} ~ {{item.endRefTime}}</view>
-              </view>
-            </view>
-            <block wx:if="{{!item.assigned}}">
-              <view class="weui-form-preview__ft">
-                <button class="weui-form-preview__btn weui-form-preview__btn_primary" hover-class="weui-form-preview__btn_active"
-                        bindtap="assign" data-openid="{{item.openid}}">选派</button>
-              </view>
-            </block>
-            <block wx:if="{{item.assigned}}">
-              <view class="weui-form-preview__ft">
-                <button class="weui-form-preview__btn weui-form-preview__btn_default" hover-class="weui-form-preview__btn_active"
-                        bindtap="assign" data-openid="{{item.openid}}">撤销</button>
-              </view>
-            </block>
           </view>
         </view>
-      </view>
-    </block>
-    <block wx:if="{{own}}">
-      <view class="weui-btn-area">
-        <button class="weui-btn" type="warn" bindtap="onDeleteGame">删除比赛</button>
-      </view>
-    </block>
-  </view>
+      </block>
+      <block wx:if="{{own}}">
+        <view class="weui-btn-area">
+          <button class="weui-btn" type="warn" bindtap="onDeleteGame">删除比赛</button>
+        </view>
+      </block>
+    </view>
